# TruckerPath

./: .gitignore  README.md  railway.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: config.py  db.py  geo.py  main.py  models.py  streams.py  tasks.py
backend/app/agents/: analyst.py  billing.py  budget.py  dispatch.py  executor.py  gemini.py  safety.py  schemas.py  tools_common.py  triage.py
backend/app/etl/: docgen.py  osrm.py  seed.py  warehouse.py  world.py
backend/app/hos/: ledger.py  schedule.py
backend/app/routers/: analytics.py  billing.py  fleet.py  ops.py  safety.py  sim.py
backend/app/sim/: detectors.py  engine.py  mover.py
backend/data/: fleet.db-shm  fleet.db-wal
backend/tests/: test_action_recipients.py  test_ai_gate.py  test_detectors.py  test_events.py  test_geo.py  test_hos_ledger.py  test_reconciler.py  test_schedule.py  test_sim_smoke.py  test_sql_guard.py  test_triage_fast_path.py
docs/: Fleet-Copilot-Deck.pptx  GTM.md  make_deck.js  package-lock.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/billing/: page.tsx
frontend/src/app/cost/: page.tsx
frontend/src/app/deck/: page.tsx
frontend/src/app/dispatch/: page.tsx
frontend/src/app/safety/: page.tsx
frontend/src/components/charts/: AgentChart.tsx  theme.ts
frontend/src/components/map/: FleetMap.tsx
frontend/src/components/ops/: ActionQueue.tsx  ActivityFeed.tsx  DriverPhone.tsx
frontend/src/lib/: api.ts  format.ts  hooks.ts  live.ts  types.ts
(+5 files in other folders)
