[project]
name = "fleet-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "fpdf2>=2.8.7",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "polyline>=2.0.4",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
